[gd_scene load_steps=10 format=3 uid="uid://m2a1hi3252yf"]

[ext_resource type="Script" path="res://ui/player_in_game_ui/player-ui.gd" id="1_7alhx"]
[ext_resource type="FontFile" uid="uid://urieviud6nqf" path="res://common/fonts/Monocraft.otf" id="1_jilrc"]
[ext_resource type="Texture2D" uid="uid://cqca72ev5gqnp" path="res://ui/player_in_game_ui/sprites/heart.png" id="2_rtxld"]
[ext_resource type="Texture2D" uid="uid://cw3b6lu8tlgaq" path="res://ui/player_in_game_ui/sprites/turn_left.png" id="3_cmxas"]
[ext_resource type="Texture2D" uid="uid://b6nwalxybgk06" path="res://ui/player_in_game_ui/sprites/turn_right.png" id="4_gj4ng"]
[ext_resource type="Texture2D" uid="uid://drnrr8roeiw75" path="res://ui/player_in_game_ui/sprites/move.png" id="5_i77fm"]
[ext_resource type="Texture2D" uid="uid://s25m2er036qg" path="res://ui/player_in_game_ui/sprites/shot.png" id="6_ly7sx"]
[ext_resource type="PackedScene" uid="uid://b41cd3faspl2j" path="res://assets/player/bullet/Bullet.tscn" id="8_aknti"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at8w7"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(400, 220)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7alhx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Lives1" type="PanelContainer" parent="CanvasLayer"]
offset_left = 11.0
offset_top = 5.0
offset_right = 74.0
offset_bottom = 47.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Lives1"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Lives1/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Lives1/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Lives1/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Count_HP1" type="Label" parent="CanvasLayer/Lives1/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jilrc")
theme_override_font_sizes/font_size = 30
text = "3"
horizontal_alignment = 1

[node name="Heart" type="TextureRect" parent="CanvasLayer/Lives1/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rtxld")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Lives1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jilrc")
text = "steps: 5"

[node name="Lives2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 7.0
offset_right = -14.0
offset_bottom = 65.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Lives2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Lives2/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Lives2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Lives2/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Count_HP1" type="Label" parent="CanvasLayer/Lives2/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jilrc")
theme_override_font_sizes/font_size = 30
text = "3"
horizontal_alignment = 1

[node name="Heart" type="TextureRect" parent="CanvasLayer/Lives2/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rtxld")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Lives2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jilrc")
text = "steps: 5"

[node name="PanelContainer_Buttons" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -45.0
offset_right = -16.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_at8w7")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer_Buttons"]
layout_mode = 2
columns = 4

[node name="Turn_left" type="Button" parent="CanvasLayer/PanelContainer_Buttons/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = ExtResource("3_cmxas")
flat = true
expand_icon = true

[node name="Turn_right" type="Button" parent="CanvasLayer/PanelContainer_Buttons/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = ExtResource("4_gj4ng")
flat = true
expand_icon = true

[node name="Move" type="Button" parent="CanvasLayer/PanelContainer_Buttons/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = ExtResource("5_i77fm")
flat = true
expand_icon = true

[node name="Shot" type="Button" parent="CanvasLayer/PanelContainer_Buttons/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = ExtResource("6_ly7sx")
flat = true
expand_icon = true

[node name="Bullet" parent="CanvasLayer/PanelContainer_Buttons/GridContainer/Shot" instance=ExtResource("8_aknti")]

[connection signal="pressed" from="CanvasLayer/PanelContainer_Buttons/GridContainer/Turn_left" to="." method="_on_turn_left_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_Buttons/GridContainer/Turn_right" to="." method="_on_turn_right_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_Buttons/GridContainer/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer_Buttons/GridContainer/Shot" to="." method="_on_shot_pressed"]
